Доработать режиссеров и вывод фильмов с жанрами